--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
   },
   "browserslist": {
     "production": [
+      "last 1 version",
       ">0.3%",
       "not ie 11",
       "not dead",
       "not op_mini all"
     ],
     "development": [
+      "last 1 version",
       ">0.3%",
       "not ie 11",
       "not dead",
